// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Teaser should render correctly in disabled mode 1`] = `
<Teaser
  details="details about this job"
  disabled={true}
  location="location"
  subTitle="Organization"
  title="A job title"
>
  <div
    className="Teaser"
  >
    <div
      className="Teaser__line"
    >
      <Text
        className="Teaser__title"
        context="muted"
        inline={true}
        title="A job title"
      >
        <span
          className="Text--context_muted Teaser__title"
          title="A job title"
        >
          A job title
        </span>
      </Text>
      <Text
        className="Teaser__location"
        context="muted"
        inline={true}
      >
        <span
          className="Text--context_muted Teaser__location"
        >
          location
        </span>
      </Text>
    </div>
    <div
      className="Teaser__line"
    >
      <Text
        className="Teaser__subTitle"
        context="muted"
        inline={true}
        title="Organization"
      >
        <span
          className="Text--context_muted Teaser__subTitle"
          title="Organization"
        >
          Organization
        </span>
      </Text>
    </div>
    <div
      className="Teaser__line"
    >
      <Text
        className="Teaser__details"
        context="muted"
        inline={true}
        title="details about this job"
      >
        <span
          className="Text--context_muted Teaser__details"
          title="details about this job"
        >
          details about this job
        </span>
      </Text>
    </div>
  </div>
</Teaser>
`;

exports[`Teaser should render correctly with just a title 1`] = `
<Teaser
  title="some title"
>
  <div
    className="Teaser"
  >
    <div
      className="Teaser__line"
    >
      <Text
        className="Teaser__title"
        context="brand"
        inline={true}
        title="some title"
      >
        <span
          className="Text--context_brand Teaser__title"
          title="some title"
        >
          some title
        </span>
      </Text>
    </div>
    <div
      className="Teaser__line"
    />
    <div
      className="Teaser__line"
    />
  </div>
</Teaser>
`;

exports[`Teaser should render with all props defined 1`] = `
<Teaser
  details="details about this job"
  location="location"
  statuses={
    Array [
      Object {
        "label": "Viewed",
        "tooltip": "Viewed two days ago",
      },
      Object {
        "label": "Imported",
        "tooltip": "Imported five days ago",
      },
    ]
  }
  subTitle="Organization"
  title="A job title"
>
  <div
    className="Teaser"
  >
    <div
      className="Teaser__line"
    >
      <Text
        className="Teaser__title"
        context="brand"
        inline={true}
        title="A job title"
      >
        <span
          className="Text--context_brand Teaser__title"
          title="A job title"
        >
          A job title
        </span>
      </Text>
      <Text
        className="Teaser__location"
        context="muted"
        inline={true}
      >
        <span
          className="Text--context_muted Teaser__location"
        >
          location
        </span>
      </Text>
    </div>
    <div
      className="Teaser__line"
    >
      <Text
        className="Teaser__subTitle"
        context="accent"
        inline={true}
        title="Organization"
      >
        <span
          className="Text--context_accent Teaser__subTitle"
          title="Organization"
        >
          Organization
        </span>
      </Text>
    </div>
    <div
      className="Teaser__line"
    >
      <Text
        className="Teaser__details"
        context="muted"
        inline={true}
        title="details about this job"
      >
        <span
          className="Text--context_muted Teaser__details"
          title="details about this job"
        >
          details about this job
        </span>
      </Text>
      <div
        className="Teaser__statuses"
      >
        <span
          key="Viewed"
        >
          <Tooltip
            animation="shift-toward"
            content="Viewed two days ago"
          >
            <ForwardRef(TippyWrapper)
              animation="shift-toward"
              content="Viewed two days ago"
            >
              <Tippy
                animation="shift-toward"
                content="Viewed two days ago"
              >
                <Text
                  context="muted"
                  inline={true}
                  size="small"
                >
                  <span
                    className="Text--context_muted Text--size_small"
                  >
                    Viewed
                  </span>
                </Text>
                <Portal
                  containerInfo={
                    <div>
                      Viewed two days ago
                    </div>
                  }
                >
                  Viewed two days ago
                </Portal>
              </Tippy>
            </ForwardRef(TippyWrapper)>
          </Tooltip>
          <Text
            context="muted"
            inline={true}
            size="small"
          >
            <span
              className="Text--context_muted Text--size_small"
            >
               & 
            </span>
          </Text>
        </span>
        <span
          key="Imported"
        >
          <Tooltip
            animation="shift-toward"
            content="Imported five days ago"
          >
            <ForwardRef(TippyWrapper)
              animation="shift-toward"
              content="Imported five days ago"
            >
              <Tippy
                animation="shift-toward"
                content="Imported five days ago"
              >
                <Text
                  context="muted"
                  inline={true}
                  size="small"
                >
                  <span
                    className="Text--context_muted Text--size_small"
                  >
                    Imported
                  </span>
                </Text>
                <Portal
                  containerInfo={
                    <div>
                      Imported five days ago
                    </div>
                  }
                >
                  Imported five days ago
                </Portal>
              </Tippy>
            </ForwardRef(TippyWrapper)>
          </Tooltip>
        </span>
      </div>
    </div>
  </div>
</Teaser>
`;
